FIX: layout issue with ul

--- a/main.css
+++ b/main.css
@@ -369,7 +369,10 @@ footer {
     line-height: 5rem;
   }
 
-  main ul,
+  main ul {
+    width: auto;
+  }
+
   main p {
     width: 100%;
   }
